# groundwork

./: .env.example  .gitignore  DECISIONS.md  PLAN.md  PROGRESS.md  README.md
apps/api/: README.md  pyproject.toml
apps/api/src/groundwork_api/: __init__.py  app.py  cli.py  llm.py  mcp_client.py  service.py
apps/api/src/groundwork_api/agent/: __init__.py  graph.py  guards.py  nodes.py  prompts.py  state.py
apps/api/src/groundwork_api/guardrails/: __init__.py  checks.py  injection.py  pii.py
apps/api/tests/: test_agent.py  test_api.py  test_guardrails.py  test_mcp_client.py
apps/mcp/: README.md  pyproject.toml
apps/mcp/src/groundwork_mcp/: __init__.py  server.py
apps/rerank/: README.md
apps/web/: README.md
docs/: README.md  agents.md  guardrails.md  ingestion.md  mcp.md  retrieval.md
eval/: README.md
infra/: README.md  docker-compose.yml
