[project]
name = "groundwork-mcp"
version = "0.1.0"
description = "Groundwork MCP server: exposes knowledge-base search as an MCP tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groundwork-retrieval",
    "mcp>=1.2,<2",
]

[project.scripts]
groundwork-mcp = "groundwork_mcp.server:main"

[tool.uv.sources]
groundwork-retrieval = { path = "../../packages/retrieval", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/groundwork_mcp"]
